--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 language: generic
-env:
-  - TARGET_BRANCH=package FOLDER_TO_EXPORT=Assets/com.vladfaust.unitywakatime
-sudo: required
-after_success:
-  - chmod 777 -R CI
-  - CI/update_package_branch.sh
-branches:
-  only:
-    - master
+deploy:
+  provider: script
+  script: bash CI/update_package_branch.sh
+  on:
+    all_branches: true
+  # on:
+  #   tags: true
+  #   condition: $TRAVIS_TAG =~ ^v[0-9]+\.[0-9]+\.[0-9]+$
